terraform/deploy/nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nginx
              topologyKey: "kubernetes.io/hostname"

      volumes:
        - name: html
          emptyDir: {}
        - name: scripts
          configMap:
            name: nginx-scripts
            defaultMode: 0555
            items:
            - key: setup.sh
              path: setup.sh
